# japanese-madori-ai-planner

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  gen_spec.py  main.py  pyproject.toml
docs/: how_to_use.md  rule.md  spec_generator.md
examples/: README.md
examples/1. Compact 2F/: spec.yaml
examples/10. Public-Private Split 2F/: spec.yaml
examples/11. Compact Wet 2F/: spec.yaml
examples/2. Mid 2F/: spec.yaml
examples/3. Slim 2F/: spec.yaml
examples/4. Near-square 2F/: spec.yaml
examples/5. Recess-inspired 2F/: spec.yaml
examples/6. 1F Hiraya Standard/: spec.yaml
examples/7. 1F Hiraya Wide/: spec.yaml
examples/8. Balcony-side 2F/: spec.yaml
examples/9. Stepback-inspired 2F/: spec.yaml
openspec/: config.yaml
plan_engine/: __init__.py  constants.py  dsl.py  dsl_closets.py  io.py  models.py  preflight.py  renderer.py  solver.py  stair_logic.py  validator.py
plan_engine/generator/: __init__.py  allocate.py  cli.py  distribute.py  emit.py  metrics.py  profiles.py  topology.py
plan_engine/models/: __init__.py  geometry.py  solution.py  spec.py  structure.py  validation.py
plan_engine/preflight/: __init__.py  closets.py  core.py  topology.py  wet.py
plan_engine/renderer/: __init__.py  annotations.py  core.py  dimensions.py  dimensions_exterior.py  dimensions_interior.py  fixtures.py  helpers.py  openings.py  stair.py  symbols.py
plan_engine/solver/: __init__.py  constraints.py  core.py  rect_var.py  solution_builder.py  space_specs.py  workflow.py  workflow_context.py  workflow_spaces.py  workflow_topology.py  workflow_wet.py
plan_engine/structural/: __init__.py  walls.py
tests/: conftest.py
tests/cli/: test_main_cli.py
(+182 files in other folders)
